# perfect-number-finder

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
include/: FileHandler.h  NumberReader.h  PerfectNumber.h  ThreadManager.h
src/: CMakeLists.txt  FileHandler.cpp  NumberReader.cpp  PerfectNumber.cpp  ThreadManager.cpp  main.cpp
src/PerfectNumber/: PerfectNumber.cpp  PerfectNumber.h
tests/: NumberReaderTest.cpp  PerfectNumberTest.cpp  ThreadManagerTest.cpp  numbers.txt
